<resources>
    <string name="app_name">Māori Dictionary</string>

    <string name="m2e_table">maori_to_english</string>
    <string name="e2m_table">english_to_maori</string>
    <string name="m2e_name">Māori to English</string>
    <string name="e2m_name">English to Māori</string>

    <string name="maori">Māori</string>
    <string name="english">English</string>

    <string name="activity_favourites">Your Favourites</string>
    <string name="action_context">Language Context</string>
    <string name="action_help">Help / Usage</string>
    <string name="action_settings">Settings</string>

    <string name="text_view_1">Translate Māori to English or English to Māori</string>
    <string name="text_view_2">Search either way or Browse All in 2 long lists :</string>
    <string name="text_view_3">Try the Random button for 5 random words &#8230;</string>
    <string name="edit_text_hint">Enter word/phrase (without macrons)</string>

    <string name="search_type_prompt">Choose a Search type</string>
    <string-array name="search_type_array">
        <item>Exact Match</item>
        <item>Fuzzy Logic</item>
        <item>Extra Fuzzy</item>
    </string-array>

    <string name="browse_all_button">Browse All</string>
    <string name="random_button">Random</string>
    <string name="main_search_button">Go Search »</string>

    <string name="cols_descr">Colours Icon</string>
    <string name="numb_descr">Numbers Icon</string>
    <string name="flag_descr">Māori Flag</string>
    <string name="bullet_point">•\u00A0</string>
</resources>
